labs/4.5/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: training
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
