labs/4.5/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: training
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: httpd
          image: httpd:2.4
          ports:
            - containerPort: 80
