labs/4.5/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: training
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
