labs/4.5/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: training
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
